--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,9 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>My Neighborhood</title>
+    <script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD2ZWG8uH4wKhdIhqiAvyRkgaVaIIORkQQ&libraries=places">
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
