Add two locations to the database of the application

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
     -->
     <title>My Neighborhood</title>
     <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key==places">
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD2ZWG8uH4wKhdIhqiAvyRkgaVaIIORkQQ&libraries=places">
     </script>
   </head>
   <body>
